--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -391,6 +391,7 @@ test_fuzz_fuzz_SOURCES = \
  test/fuzz/timeoffsets.cpp \
  test/fuzz/torcontrol.cpp \
  test/fuzz/transaction.cpp \
+ test/fuzz/txdownloadman.cpp \
  test/fuzz/tx_in.cpp \
  test/fuzz/tx_out.cpp \
  test/fuzz/tx_pool.cpp \
