--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,6 +107,11 @@ if(WITH_NATPMP)
   find_package(NATPMP MODULE REQUIRED)
 endif()
 
+option(WITH_MINIUPNPC "Enable UPnP." OFF)
+if(WITH_MINIUPNPC)
+  find_package(MiniUPnPc MODULE REQUIRED)
+endif()
+
 set(configure_warnings)
 
 include(CheckPIESupported)
@@ -328,6 +333,7 @@ if(ENABLE_WALLET)
 endif()
 message("  port mapping:")
 message("   - using NAT-PMP .................... ${WITH_NATPMP}")
+message("   - using UPnP ....................... ${WITH_MINIUPNPC}")
 message("Tests:")
 message("  test_bitcoin ........................ ${BUILD_TESTS}")
 message("")
