--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,6 +112,21 @@ if(WITH_MINIUPNPC)
   find_package(MiniUPnPc MODULE REQUIRED)
 endif()
 
+option(WITH_ZMQ "Enable ZMQ notifications." OFF)
+if(WITH_ZMQ)
+  if(VCPKG_TARGET_TRIPLET)
+    find_package(ZeroMQ CONFIG REQUIRED)
+  else()
+    # The ZeroMQ project has provided config files since v4.2.2.
+    # TODO: Switch to find_package(ZeroMQ) at some point in the future.
+    find_package(PkgConfig REQUIRED)
+    pkg_check_modules(libzmq REQUIRED IMPORTED_TARGET libzmq>=4)
+    target_link_libraries(PkgConfig::libzmq INTERFACE
+      $<$<PLATFORM_ID:Windows>:iphlpapi;ws2_32>
+    )
+  endif()
+endif()
+
 set(configure_warnings)
 
 include(CheckPIESupported)
@@ -334,6 +349,7 @@ endif()
 message("  port mapping:")
 message("   - using NAT-PMP .................... ${WITH_NATPMP}")
 message("   - using UPnP ....................... ${WITH_MINIUPNPC}")
+message("  ZeroMQ .............................. ${WITH_ZMQ}")
 message("Tests:")
 message("  test_bitcoin ........................ ${BUILD_TESTS}")
 message("")
