Stratum v2 template provider scaffold
The template provider will listen for a Job Declarator client.
It can establish a connection and detect various protocol errors.

Co-Authored-By: Christopher Coverdale <chris.coverdale24@gmail.com>
Co-Authored-By: Fi3

--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -155,6 +155,7 @@ BITCOIN_TESTS =\
   test/sv2_connman_tests.cpp \
   test/sv2_messages_tests.cpp \
   test/sv2_noise_tests.cpp \
+  test/sv2_template_provider_tests.cpp \
   test/sv2_transport_tests.cpp \
   test/sync_tests.cpp \
   test/system_tests.cpp \
