--- a/configure.ac
+++ b/configure.ac
@@ -1418,6 +1418,7 @@ fi
 AM_CONDITIONAL([BUILD_MULTIPROCESS], [test "$build_multiprocess" = "yes"])
 AM_CONDITIONAL([BUILD_BITCOIN_NODE], [test "$build_multiprocess" = "yes"])
 AM_CONDITIONAL([BUILD_BITCOIN_GUI], [test "$build_multiprocess" = "yes"])
+AM_CONDITIONAL([BUILD_BITCOIN_MINE], [test "$build_multiprocess" = "yes"])
 
 dnl codegen tools check
 
